<resources>
    <string name="app_name">FII APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message">MessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reapeatpass">Repeat Password</string>
    <string name="nrmatricol">Numar matricol</string>
    <string name="username">Username</string>
    <string name="existingaccount">Already have an account ?</string>
    <string name="register">Register</string>
    <string name="logoFII">LogoFII</string>
    <string name="cursuri">Cursuri</string>
    <string name="cursuriOOP">Cursuri OOP</string>
    <string name="cursuriBD">Cursuri baze de date</string>
    <string name="login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="forgotpass">Forgot password ?</string>
    <string name="newaccount">Dont have an account ?</string>
    <string name="copyright">Aceasta aplicatie reprezinta lucrarea de licenta a studentului Cazacu Razvan-Nicusor</string>
    <string name="logininfo">\u25CF Logout - ne deconecteaza de pe utiliatorul logat si ne redirectioneaza catre pagina de login</string>
    <string name="logout">Logout : </string>
    <string name="chatinfo1">\u25CF Pe partea de users ne afiseaza toti utilizatorii inregistrati in aplicatie</string>
    <string name="chatinfo2">\u25CF Pe partea de chat ne afiseaza convorbirile intre utilizatorul logat si alt utilizator si afisarea ultimului mesaj trimis</string>
    <string name="chatinfo3">\u25CF Pe partea de profil ne putem incarca poza de profil , sa stergem utilizatorul si sa schimbam parola contului.Desigur aici mai putem vizualiza email-ul folosit pentru utilizatorul existent si numele introdus cand a fost inregistrat contul</string>
    <string name="chat">Chat : </string>
    <string name="Cursuri">Cursuri : </string>
    <string name="cursuriinfo">\u25CF Pentru optiunea de cursuri punem la dispozitie fisierele pdf cu continul cursurilor si un buton de download cu care putem descarca fisierul pdf in memoria locala</string>
    <string name="quiz">Quiz : </string>
    <string name="quizinfo1">\u25CF Aici vom putea vedea materiile pentru care vom putea sustine un test</string>
    <string name="quizinfo2">\u25CF Pentru fiecare test vom avea 10 intrebari , cu 4 variante de raspuns</string>
    <string name="quizinfo3">\u25CF Pentru a veni in ajutorul studentilor punem la dispozitie butonul de Hint care va afisa un mesaj timp de cateva secunde cu o idee despre raspunsul corect</string>
    <string name="quizinfo4">\u25CF La sfarsit se va afisa timpul scurs pentru finalizarea testului</string>
    <string name="info">FII APP pune la dispozitie utilizatorilor cursurile in format pdf , quiz-uri cu intrebari din cursurile existente in aplicatie si chat live cu toti utilizatorii inregistrati in aplicatie</string>
    <string name="info2">Mai departe voi dezvolta functionalitatile puse la dispozitie de aplicatie mai in detaliu</string>
    <string name="schimbaparola">Schimba Parola</string>
    <string name="schimbaparolainfo">Apasand butonul Schimba parola iti vei schimba parola veche.</string>
    <string name="repetaparolanoua">Repeta parola noua</string>
    <string name="parolanoua">Parola noua</string>
    <string name="parolaactuala">Parola actuala</string>
    <string name="search">Search...</string>
    <string name="sendmessage">Send message button</string>
    <string name="typemessage">Type a message...</string>
    <string name="searchwordbutton">Search word in pdf</string>
    <string name="timer">00:00:00</string>
    <string name="hint">Hint</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="backbutton">Back</string>
    <string name="quizpage">Quiz Page</string>
    <string name="quizoop">Quiz OOP</string>
    <string name="quizbd">Quiz baze de date</string>
    <string name="reset">Reset</string>
    <string name="emailforreset">Your email</string>
    <string name="resetinfo">Apasand butonul RESET vei primi un email cu ajutorul caruia vei putea sa iti recuperezi parola</string>
    <string name="sharescore">Share Your Score</string>
    <string name="shareinfo">Felicitari ! Ai terminat quiz-ul cu success ! Timpul scurs este :</string>
    <string name="score">1/10</string>
    <string name="message">Hello</string>
    <string name="fiiapp">FII App</string>
    <string name="chat2">Chat</string>
    <string name="quiz2">Quiz</string>
    <string name="logout2">Logout</string>
    <string name="home">Home</string>
    <string name="download">Download</string>
    <string name="numeprenume">Nume Prenume</string>
    <string name="stergeutilizator">Sterge utilizatorul</string>
    <string name="pozaprofil">Incarca poza de profil</string>
    <string name="burgermenu">Burgermenu</string>
    <string name="titludownload">Aici va veni titlul cursului</string>
    <string name="title_activity_nav_drawer">navDrawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>