<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:background="#1683BD"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fiiuaic"
        android:layout_marginTop="-7dp"
        android:contentDescription="@string/logoFII" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/parolaactuala"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            tools:ignore="TextContrastCheck"></com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/parolanoua"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            tools:ignore="TextContrastCheck"></com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/repetaparolanoua"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            tools:ignore="TextContrastCheck"></com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:text="@string/schimbaparola"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck">

        </Button>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:text="@string/schimbaparolainfo">

        </TextView>

    </LinearLayout>

</LinearLayout>