<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:background="@color/fiiblue"
    tools:context=".QuizBD">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/fiiblue">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_back"
                android:contentDescription="@string/backbutton"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"></ImageView>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer"
            android:textColor="@android:color/black"
            android:textSize="40sp" />
        <!--    Intrebarea  -->
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginRight="7dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="7dp"
            android:layout_height="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_question"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="@string/app_name">
            </TextView>

        </androidx.cardview.widget.CardView>

        <!--    Variantele de raspuns (A,B,C,D) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/CardA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/card_optiona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a"
                android:textColor="@color/black"></TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardB"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/card_optionb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/b"
                android:textColor="@color/black"></TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardC"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/card_optionc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/c"
                android:textColor="@color/black"></TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardD"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/card_optiond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/d"
                android:textColor="@color/black"></TextView>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/nextBTN"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/next_btn_shape"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAllCaps="true">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hintBTN"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/next_btn_shape"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAllCaps="true">
            </TextView>
        </LinearLayout>
    </LinearLayout>


   </androidx.drawerlayout.widget.DrawerLayout>