<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".wonActivity"
    android:background="@color/fiiblue">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/fiiblue">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/backbutton"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"></ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >

        <TextView
            android:id="@+id/timpScurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/shareinfo"
            tools:ignore="TextContrastCheck"></TextView>

        <TextView
            android:id="@+id/timpScurs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timpScurs"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/timer"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_marginTop="50dp"
        android:layout_width="170dp"
        android:layout_below="@id/rl3"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cpb_background_progressbar_color="@color/red"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progress_max="10"
            app:cpb_progressbar_color="@color/green"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/score"
            android:textColor="@color/colorWhite"
            android:textSize="22sp">

        </TextView>
    </RelativeLayout>



        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:background="@drawable/share_shape"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sharescore"
                android:textColor="@color/colorWhite"
                tools:ignore="TextContrastCheck">

            </TextView>
        </LinearLayout>

</RelativeLayout>